Added Proper Function to Render Elements/Added Extra is_end var in rooms 🫠

--- a/client/partials/game.html
+++ b/client/partials/game.html
@@ -84,7 +84,7 @@
       cursor: pointer;
     }
     #emoji_icon:hover > svg{
-      color: var(--bs-gray-400);
+      color: var(--bs-gray-500);
     }
 </style>
 
@@ -107,7 +107,7 @@
   class="position-absolute" style="top:50px;left:5px">
     <button
       type="button" class="btn d-flex border-0 fs-5"
-      style="cursor: pointer;--bs-text-opacity:0;color:#9b9d9e;"
+      style="cursor: pointer;--bs-text-opacity:0;color:var(--bs-body-color);"
       id="emoji_icon" onclick="show_emoji()">
       <i class="fa-solid fa-face-smile-beam"></i>
     </button>
