Added Player Levels/Titles to Client Side

--- a/client/partials/game.html
+++ b/client/partials/game.html
@@ -23,7 +23,9 @@
 		    <span class="fw-bold">
 		      Lv:
 		    </span>
-		    <span class="user_level">0</span>
+		    <span class="user_level"></span>
+		    <span class="fw-bold user_title" style="text-transform: capitalize;">
+		    </span>
 		  </span>
 		</span>
 	</h5>
