Added AI Play Mode 🤖

--- a/client/partials/room.html
+++ b/client/partials/room.html
@@ -39,5 +39,11 @@
 		  class="btn btn-outline-secondary d-flex justify-content-center w-100 mt-3">
 		<span>Generate Random</span>
 		</button>
+		<button
+		    type="button"
+		    onclick="setup_ai()"
+		  class="btn btn-outline-secondary d-flex justify-content-center w-100 mt-3">
+		<span>Play AI</span>
+		</button>
   </form>
 </div>
