--- a/client/partials/game.html
+++ b/client/partials/game.html
@@ -1,5 +1,5 @@
 <style>
-.board-cell {
+.board-cell, .board-cell-ai {
       border: 1px solid var(--bs-secondary-border-subtle);
       height: 100px;
       display: flex;
@@ -7,7 +7,7 @@
       justify-content: center;
       font-size: 2em;
     }
-    .board-cell:hover {
+    .board-cell:hover, .board-cell-ai:hover {
       background-color: var(--bs-gray-800);
       cursor: pointer;
     }
